changed popup msg and fixwed home screen layout problem

--- a/src/Home.css
+++ b/src/Home.css
@@ -35,12 +35,11 @@ html::-webkit-scrollbar {
   width: 100%;
   height: 100%;
 
-  margin-left: 3vw;
 }
 
 .IntroBox{
 
-    margin-top: 15vh;
+    margin-top: -20vh;
 
 }
 
